# mpi-lab2

./: .gitignore  CMakeLists.txt  main.cpp
